--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 body {
-	font: 1rem/1.2rem "Open Sans", Sans-serif, Tahoma;
+	font: 1rem/1.2rem 'Open Sans', Sans-serif, Tahoma;
 	overflow-x: hidden;
 	max-width: 100vw;
+}
+
+::-moz-selection {
+	background-color: #ffb110;
+	color: #fff;
 }
 
 ::selection {
@@ -63,7 +68,7 @@ body {
 }
 
 .text-oswald {
-	font-family: Oswald, "Open Sans", Tahoma;
+	font-family: Oswald, 'Open Sans', Tahoma;
 }
 
 .bg-orange {
@@ -98,16 +103,12 @@ nav .navLeft .nav-link::after {
 	width: 100%;
 	height: 3px;
 	background: #ffb110;
-	-webkit-transition: width .3s;
-	transition: transform .3s;
-	-webkit-transform: scaleX(0);
+	transition: transform 0.3s;
 	transform: scaleX(0);
-	-webkit-transform-origin: 100% 50%;
 	transform-origin: 0% 50%;
 }
 
 nav .navLeft .nav-link:hover::after {
-	-webkit-transform: scaleX(1);
 	transform: scaleX(1);
 }
 
@@ -117,16 +118,12 @@ nav .navRight .nav-link::after {
 	height: 3px;
 	width: 100%;
 	background: #ffb110;
-	-webkit-transition: width .3s;
-	transition: transform .3s;
-	-webkit-transform: scaleX(0);
+	transition: transform 0.3s;
 	transform: scaleX(0);
-	-webkit-transform-origin: 100% 50%;
 	transform-origin: 100% 50%;
 }
 
 nav .navRight .nav-link:hover::after {
-	-webkit-transform: scaleX(1);
 	transform: scaleX(1);
 }
 
@@ -157,7 +154,6 @@ nav .nav-social i,
 	margin: 0 3px 0 3px;
 	border: 2px solid #fff;
 	border-radius: 2em;
-	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
 
@@ -207,7 +203,6 @@ nav .nav-social .twitter:hover {
 }
 
 .btn-rounded:active {
-	-webkit-transform: scale(0.9);
 	transform: scale(0.9);
 }
 
@@ -229,14 +224,12 @@ nav .nav-social .twitter:hover {
 	opacity: 0.5;
 	top: 0;
 	left: 50%;
-	-webkit-transform: translate(-50%, -40%);
 	transform: translate(-50%, -40%);
 }
 
 .section-1-img-container {
 	bottom: -25%;
 	right: -5%;
-	-webkit-transform: rotateZ(45deg);
 	transform: rotateZ(45deg);
 	overflow: hidden;
 }
@@ -253,7 +246,6 @@ nav .nav-social .twitter:hover {
 	height: 354px;
 	width: 354px;
 	margin: -56px;
-	-webkit-transform: rotateZ(-45deg);
 	transform: rotateZ(-45deg);
 }
 
@@ -289,9 +281,7 @@ nav .nav-social .twitter:hover {
 }
 
 .section-3-col {
-	-webkit-box-flex: 50%;
 	box-flex: 50%;
-	-ms-flex: 50%;
 	flex: 50%;
 }
 
@@ -364,7 +354,6 @@ nav .nav-social .twitter:hover {
 .review-quote {
 	font-size: 1.2rem;
 	line-height: 0.2rem;
-	-webkit-transform: translate(-100%, -50%);
 	transform: translate(-100%, -50%);
 }
 
@@ -389,7 +378,6 @@ footer .contact {
 }
 
 footer .design-img {
-	-webkit-transform: rotate(180deg) translateX(50%);
 	transform: rotate(180deg) translateX(50%);
 	bottom: -37%;
 	left: 50%;
@@ -398,6 +386,5 @@ footer .design-img {
 footer .footer-copyright {
 	bottom: 10px;
 	left: 50%;
-	-webkit-transform: translateX(-50%);
 	transform: translateX(-50%);
 }
