:lipstick: Changed social icons

--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,8 @@ nav .nav-social .facebook:hover {
 	border: 2px solid rgba(0, 0, 0, 0);
 }
 
-nav .nav-social .google-plus:hover {
-	background-color: #dd4b39;
+nav .nav-social .linkedin:hover {
+	background-color: #0e76a8;
 	color: #fff;
 	border: 2px solid rgba(0, 0, 0, 0);
 }
