--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -1,3 +1,5 @@
+@use '~bootstrap/scss/bootstrap';
+
 .section-1,
 .section-2,
 .section-3,
@@ -133,7 +135,7 @@
 	height: 6px;
 	width: 40%;
 	width: 4ch;
-	background-color: #ffb110;
+	background-color: bootstrap.$primary;
 	margin: 0.3em 0;
 }
 
