--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,3 +1,5 @@
+@use 'utils';
+
 .hero-image {
 	min-height: 900px;
 	max-width: 100vw;
@@ -9,6 +11,10 @@
 
 .header {
 	padding: 15em 0 0 0;
+
+	@include utils.mobile {
+		padding: 5rem 1rem;
+	}
 }
 
 .hero-text p {
