--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -7,7 +7,6 @@
 .section-5,
 .section-6 {
 	min-height: 550px;
-	overflow: hidden;
 }
 
 .section-1-img-background {
@@ -23,14 +22,12 @@
 	bottom: -25%;
 	right: -5%;
 	transform: rotateZ(45deg);
-	overflow: hidden;
 }
 
 .section-1-img-border {
 	border: 2px solid;
 	height: 250px;
 	width: 250px;
-	overflow: hidden;
 }
 
 .section-1-img-fluid {
@@ -42,34 +39,41 @@
 }
 
 .section-1-img-1 {
-	background: #fff url(../img/section-1-1.jpg) no-repeat center center;
-	background-size: cover;
+	background: #fff url(../img/section-1-1.jpg) no-repeat center center / cover;
 }
 
 .section-1-img-2 {
-	background: #fff url(../img/section-1-2.jpg) no-repeat center center;
-	background-size: cover;
+	background: #fff url(../img/section-1-2.jpg) no-repeat center center / cover;
 }
 
 .section-1-img-3 {
-	background: #fff url(../img/section-1-3.jpg) no-repeat center center;
-	background-size: cover;
+	background: #fff url(../img/section-1-3.jpg) no-repeat center center / cover;
 }
 
 .section-1-img-4 {
-	background: #fff url(../img/section-1-4.jpg) no-repeat center center;
-	background-size: cover;
-}
-
-.section-2-img {
-	height: 260px;
-	max-width: 100%;
-	-o-object-fit: cover;
-	object-fit: cover;
+	background: #fff url(../img/section-1-4.jpg) no-repeat center center / cover;
 }
 
 .section-2 .card {
-	overflow: hidden;
+	// height: 337px;
+
+	&:hover .section-2-img {
+		transform: scale(1.1);
+	}
+
+	& .container {
+		position: relative;
+		z-index: 10;
+		background-color: #fff;
+	}
+}
+
+.section-2-img {
+	height: 300px;
+	width: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	transition: 0.3s ease-out;
 }
 
 .section-3-col {
@@ -98,8 +102,7 @@
 }
 
 .section-5-background {
-	background: url(../img/section-5-1.jpg) no-repeat center center;
-	background-size: cover;
+	background: url(../img/section-5-1.jpg) no-repeat center center / cover;
 }
 
 .section-5-over-container {
