--- a/src/scss/loader.scss
+++ b/src/scss/loader.scss
@@ -1,3 +1,5 @@
+@use '~bootstrap/scss/bootstrap';
+
 .loader {
 	position: absolute;
 	left: 50%;
@@ -8,8 +10,8 @@
 	margin: -75px 0 0 -75px;
 	border: 16px solid #f3f3f3;
 	border-radius: 50%;
-	border-top: 16px solid #ffb110;
-	border-bottom: 16px solid #ffb110;
+	border-top: 16px solid bootstrap.$primary;
+	border-bottom: 16px solid bootstrap.$primary;
 	-webkit-animation: spin 2s linear infinite;
 	animation: spin 2s linear infinite;
 }
