--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,3 +1,5 @@
+@use '~bootstrap/scss/bootstrap';
+
 nav .navLeft,
 nav .navRight {
 	bottom: 0.6em;
@@ -8,7 +10,7 @@ nav .navLeft .nav-link::after {
 	display: block;
 	width: 100%;
 	height: 3px;
-	background: #ffb110;
+	background: bootstrap.$primary;
 	transition: transform 0.3s;
 	transform: scaleX(0);
 	transform-origin: 0% 50%;
@@ -23,7 +25,7 @@ nav .navRight .nav-link::after {
 	display: block;
 	height: 3px;
 	width: 100%;
-	background: #ffb110;
+	background: bootstrap.$primary;
 	transition: transform 0.3s;
 	transform: scaleX(0);
 	transform-origin: 100% 50%;
